# Facial-Expression-Recognition

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-build.sh  docker-compose.yml  docker-run.sh  docker-stop.sh  pyproject.toml
configs/: dataset.yaml  inference.yaml  model.yaml  training.yaml  validation.yaml
scripts/: download_dataset.sh  predict.py  predict.sh  train.py  train.sh  validate.py  validate.sh  visualize_dataset.py
src/data/: data_loader.py  dataset.py
src/inference/: predictor.py
src/models/: model.py
src/training/: evaluator.py  trainer.py
src/utils/: config.py  eval_metrics.py  visualization.py
tests/: test_dataloaders.py  test_dataset.py  test_models.py  test_training.py
